--- a/app/components/header_component.html.erb
+++ b/app/components/header_component.html.erb
@@ -14,17 +14,19 @@
       </a>
     </div>
 
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-primary">
-            <strong>Sign up</strong>
-          </a>
-          <a class="button is-light">
-            Log in
-          </a>
+    <% unless helpers.current_user %>
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-primary" href="<%= user_registration_path %>">
+              <strong>Sign up</strong>
+            </a>
+            <a class="button is-light" href="<%= new_user_session_path %>">
+              Log in
+            </a>
+          </div>
         </div>
       </div>
-    </div>
+    <% end %>
   </div>
 </nav>
